[package]
name = "umaibou-monster-game-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "webscoket_realtime_prac"
path = "src/lib.rs"

[[bin]]
name = "umaibou-monster-game-server"
path = "src/main.rs"

[dependencies]
actix = "0.13.5"
actix-rt = "2.11.0"
actix-web = "4.12.0"
actix-web-actors = "4.3.0"
actix-files = "0.6"
actix-multipart = "0.6"
futures-util = "0.3"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tokio = { version = "1.41", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
actix-test = "0.1"
awc = "3.5"
tokio-tungstenite = "0.26"
futures-util = "0.3"
